# munt-android

./: README.md
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt
android-app/app/src/main/java/com/example/muntforandroid/: MainActivity.kt  UsbMidiManager.kt
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml
android-app/gradle/wrapper/: gradle-wrapper.properties
munt-android/: .gitignore  README.md
munt-android/android-app/: local.properties.template
munt-android/android-app/app/src/main/cpp/: MuntBridge.cpp
munt-android/android-app/app/src/main/cpp/mt32emu/: config.h
munt-android/android-app/app/src/main/java/com/example/muntforandroid/: MainActivity.kt  MidiStreamParser.kt  MuntEngine.kt  RtpMidiSession.kt
munt-android/android-app/app/src/main/res/values/: themes.xml
munt-android/android-app/app/src/main/res/values-ko-rKR/: strings.xml
munt-android/android-app/app/src/main/res/values-night/: themes.xml
munt-android/android-app/app/src/main/res/xml/: device_filter.xml
munt-android/android-app/gradle/: libs.versions.toml
munt-android/esp32-firmware/: dos_midi_v4.ino
